# chatsounds-cli

./: .gitignore  Cargo.toml  flake.nix
.devcontainer/: Dockerfile
.github/workflows/: build.yml  rust.yml  update-lock-files.yml
src/: error.rs  main.rs  setup.rs
