[package]
name = "chatsounds-cli"
version = "0.6.1"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2024"
publish = false

[features]
default = ["render"]
codecs = ["chatsounds/mp3", "chatsounds/vorbis", "chatsounds/wav"]
render = ["codecs"]
playback = ["codecs", "chatsounds/playback"]

[dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.57", features = ["derive"] }
chatsounds = { git = "https://github.com/SpiralP/rust-chatsounds.git", branch = "main", default-features = false, features = [
    "fs",
    "rayon",
] }
futures = "=0.3.31"
rand = "=0.9.2"
tokio = { version = "=1.48.0", features = ["full"] }


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
