[package]
name = "chatsounds-cli"
version = "0.6.1"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2024"
publish = false

[features]
default = ["render"]
codecs = ["chatsounds/mp3", "chatsounds/vorbis", "chatsounds/wav"]
render = ["codecs"]
playback = ["codecs", "chatsounds/playback"]

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.5.60", features = ["derive"] }
chatsounds = { git = "https://github.com/SpiralP/rust-chatsounds.git", branch = "main", default-features = false, features = [
    "fs",
    "rayon",
] }
futures = "=0.3.32"
rand = "=0.9.2"
tokio = { version = "=1.49.0", features = ["full"] }


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
